--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
 		          <div class="col-md-12 heading-section ftco-animate">
 		          	<h1 class="big">About</h1>
 		            <h2 class="mb-4">About Me</h2>
-		            <p>A small river named Duden flows by their place and supplies it with the necessary regelialia.</p>
+		            <p>I’m Sameer, a Computer Science Engineering student specializing in Data Analytics and Data Science at Alliance University, Bengaluru. My studies focus on SQL, Python, Machine Learning, Data Visualization, and Business Analytics, with a keen interest in financial data analysis and AI-driven insights. I am passionate about transforming raw data into meaningful information and leveraging data science for smarter decision-making.</p>
 		            <ul class="about-info mt-4 px-md-0 px-2">
 		            	<li class="d-flex"><span>Name:</span> <span>Md Sameer Alam</span></li>
 		            	<li class="d-flex"><span>Date of birth:</span> <span>February 10, 2002</span></li>
@@ -599,7 +599,7 @@
           			<span class="icon-map-signs"></span>
           		</div>
           		<h3 class="mb-4">Address</h3>
-	            <p>198 West 21th Street, Suite 721 New York NY 10016</p>
+	            <p>Wipro Gate, Electronic City, Bengaluru, Karnataka, India </p>
 	          </div>
           </div>
           <div class="col-md-6 col-lg-3 d-flex ftco-animate">
@@ -608,7 +608,7 @@
           			<span class="icon-phone2"></span>
           		</div>
           		<h3 class="mb-4">Contact Number</h3>
-	            <p><a href="tel://1234567920">+ 1235 2355 98</a></p>
+	            <p><a href="tel://1234567920">+91 7488772537</a></p>
 	          </div>
           </div>
           <div class="col-md-6 col-lg-3 d-flex ftco-animate">
@@ -617,7 +617,7 @@
           			<span class="icon-paper-plane"></span>
           		</div>
           		<h3 class="mb-4">Email Address</h3>
-	            <p><a href="mailto:info@yoursite.com">info@yoursite.com</a></p>
+	            <p><a href="mailto:info@yoursite.com">mdsameersameer0786@gmail.com</a></p>
 	          </div>
           </div>
           <div class="col-md-6 col-lg-3 d-flex ftco-animate">
@@ -667,7 +667,7 @@
           <div class="col-md">
             <div class="ftco-footer-widget mb-4">
               <h2 class="ftco-heading-2">About</h2>
-              <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
+              <p>I’m Sameer, a Computer Science Engineering student specializing in Data Analytics and Data Science at Alliance University, Bengaluru. My studies focus on SQL, Python, Machine Learning, Data Visualization, and Business Analytics, with a keen interest in financial data analysis and AI-driven insights. I am passionate about transforming raw data into meaningful information and leveraging data science for smarter decision-making.</p>
               <ul class="ftco-footer-social list-unstyled float-md-left float-lft mt-5">
                 <li class="ftco-animate"><a href="#"><span class="icon-twitter"></span></a></li>
                 <li class="ftco-animate"><a href="#"><span class="icon-facebook"></span></a></li>
@@ -704,9 +704,9 @@
             	<h2 class="ftco-heading-2">Have a Questions?</h2>
             	<div class="block-23 mb-3">
 	              <ul>
-	                <li><span class="icon icon-map-marker"></span><span class="text">203 Fake St. Mountain View, San Francisco, California, USA</span></li>
-	                <li><a href="#"><span class="icon icon-phone"></span><span class="text">+2 392 3929 210</span></a></li>
-	                <li><a href="#"><span class="icon icon-envelope"></span><span class="text">info@yourdomain.com</span></a></li>
+	                <li><span class="icon icon-map-marker"></span><span class="text">Wipro Gate, Electronic City, Bengaluru, Karnataka, India</span></li>
+	                <li><a href="#"><span class="icon icon-phone"></span><span class="text">+91 7488772537</span></a></li>
+	                <li><a href="#"><span class="icon icon-envelope"></span><span class="text">mdsameersameer0786@gmail.com</span></a></li>
 	              </ul>
 	            </div>
             </div>
