--- a/index.html
+++ b/index.html
@@ -626,7 +626,7 @@
           			<span class="icon-globe"></span>
           		</div>
           		<h3 class="mb-4">Website</h3>
-	            <p><a href="#">yoursite.com</a></p>
+	            <p><a href="#">https://sameer-503.github.io/sameer/</a></p>
 	          </div>
           </div>
         </div>
